--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "gh": "^2.8.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "gh": "^2.8.9",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
